# CoolCAD

./: .gitignore  Makefile  Makefile.in  application.qrc  configure  configure.ac
src/: .gitignore  Makefile.am  Makefile.in  main.cpp  mainWindow.cpp  mainWindow.h  parteditor.cpp  parteditor.h  parteditor2.cpp  parteditor2.h  pwanmath.cpp  pwanmath.h  pwanstrings.cpp  t_infoWindow.cpp  t_infoWindow.h  t_libraryeditor.cpp  t_libraryeditor.h  t_schObject.cpp  t_schObject.h  t_symbol.cpp  t_symbol.h
